styles/jqui/options/trontastic.css
/* $Id$
	Jqui theme (jqui.css), Trontastic theme option (trontastic.css)
	for Tikiwiki CMS/Groupware.
	Visit http://themes.tikiwiki.org for more information.
*/

html {
	background: #1e1e1e;
}
body   {
	background: #9fda58;
	font-family: Segoe UI, Helvetica, Arial, sans-serif; font-size: 1.2em;
	color: #454545;
}

a,
a:visited {
	color: #4a4a4a;
	text-decoration: none;
}

a:hover {
	color: #000;
	text-decoration: none;
}

span.button a,
span.button a:visited,
button,
input[type="reset"],
input[type="submit"],
span.button input,
.calbuttonBox a {
	border: 1px solid #1b1613;
	color: #b8ec79;
	background: #0a0a0a url(../../../lib/jquery/jquery-ui/themes/trontastic/images/ui-bg_glass_40_0a0a0a_1x400.png) 50% 50% repeat-x;
}

span.button a:hover,
.button a:hover,
button:hover,
input[type="reset"]:hover,
input[type="submit"]:hover,
.button input:hover,
.calbuttonBox:hover {
	border: 1px solid #000000;
	background: #000000 url(../../../lib/jquery/jquery-ui/themes/trontastic/images/ui-bg_glass_60_000000_1x400.png) 50% 50% repeat-x;
	color: #96f226;
}

input[type="text"],
input[type="password"],
select,
textarea,
body.wikitext {
	background: #c6e99c;
	color: #000;
}

#siteheader {
	background: #c6e99c;
}
#tiki-top {
	border: 1px solid #aaaaaa;
	background: #000000 url(../../../lib/jquery/jquery-ui/themes/trontastic/images/ui-bg_gloss-wave_55_000000_500x100.png) 50% 50% repeat-x;
	color: #c6e99c;
	font-size: 1.1em;
}
	
#middle {
	background: #9fda58 url(../../../lib/jquery/jquery-ui/themes/trontastic/images/ui-bg_gloss-wave_85_9fda58_500x100.png) repeat-x;
}

.footerbgtrap {
	background: #000000 url(../../../lib/jquery/jquery-ui/themes/trontastic/images/ui-bg_gloss-wave_55_000000_500x100.png) 50% 50% repeat-x;
	color: #c6e99c;
}

#footer a:link,
#footer a:visited  {
	color: #B8EC79;	
}

.cssmenu_horiz a,
.cssmenu_vert a,
#tiki-top .cssmenu_horiz li ul li a,
#tiki-top .cssmenu_horiz li:hover ul li a {
	background: none;
}

/*.cssmenu_horiz li ul li,*/
.cssmenu_vert li ul li,
#secondary_site_menu .cssmenu_horiz li:hover ul li,
#secondary_site_menu .cssmenu_horiz li.sfHover ul li {
	background:	#4a4a4a;
	border: none;
}

#secondary_site_menu .cssmenu_horiz li:hover ul li a,
#secondary_site_menu .cssmenu_horiz li.sfHover ul li a {
	color: #B8EC79;
}

#secondary_site_menu .cssmenu_horiz li:hover ul li:hover a,
#secondary_site_menu .cssmenu_horiz li.sfHover ul li:hover a {
	color: #9fda58;
}

#tiki-top .cssmenu_horiz li:hover ul ul,
#tiki-top .cssmenu_horiz li.sfHover ul ul,
#secondary_site_menu .cssmenu_horiz li:hover ul ul,
#secondary_site_menu .cssmenu_horiz li.sfHover ul ul {
	top: 0;
}

.cssmenu_horiz li ul li:first-child,
.cssmenu_vert li ul li:first-child {
	border-top: none;
}

.cssmenu_horiz li ul li,
.cssmenu_vert li ul li {
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
}

.wikitext {
	padding: .2em;
	margin: 0 .5em 10px;
	border: 1px solid #4a4a4a;
	background: #000000 url(../../../lib/jquery/jquery-ui/themes/trontastic/images/ui-bg_gloss-wave_55_000000_500x100.png) 50% top repeat-x;
	color: #f3fce8;
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
}

h1.pagetitle a,
h1.pagetitle a:visited,
h1.pagetitle a:hover {

}

.box,
.cbox {
	border: 1px solid #4a4a4a;
	background: #000000 url(../../../lib/jquery/jquery-ui/themes/trontastic/images/ui-bg_gloss-wave_55_000000_500x100.png) 50% top repeat-x;
	color: #f3fce8;
}

.cbox a,
.box a {
	 color: #ffffff;
}

.cbox-title,
h3.box-title {
	border: 1px solid #000000;
	background: #9fda58 url(../../../lib/jquery/jquery-ui/themes/trontastic/images/ui-bg_gloss-wave_85_9fda58_500x100.png) 50% 50% repeat-x; color: #222222;
	font-weight: bold;
	color: #222222;
}

.box-data a:link,
.box-data a:visited,
.wikitext a:link,
.wikitext a:visited,
.postbody a:link,
.postbody a:visited,
.headers a.link  {
	color: #B8EC79;	
}

.post .postbody-title .title a.link {
	color: #222;
}

.box-data a:hover,
.wikitext a:hover  {
	color: #9fda58;	
}

.rbox-title, 
.rbox-data {
	background: #FBF9EE url(../../../lib/jquery/jquery-ui/themes/base/images/?new=fbf9ee&w=1&h=400&f=png&q=100&fltr[]=over|textures/02_glass.png|0|0|55) repeat-x scroll 50% 50%;
	border: 1px solid #FCEFA1;
	color: #363636;
}

.rbox-title {
	background: /*rboxtitle_background*/;
	color: /*rboxtitle_color*/;
	border-bottom: none !important;
}
	
.rbox-data {
	background: /*rboxdata_background*/;
}

.warning .rbox-title,
.warning .rbox-data {
	background: #F6ECD5 url(../../../lib/jquery/jquery-ui/themes/base/images/12_gloss_wave.png|0|0|95) repeat-x scroll 50% top;
	border:1px solid #F1AC88;
	color:#74736D;
}

table.normal {
	border: 1px solid #95da58;
}

tr.odd td,
td.odd,
li.odd {
	background: #c6e99c;
	border-right: /*tdodd_border-right*/;
}

tr.even td,
td.even,
li.even {
	background: #b0e077;
	border-right: /*tdeven_border-right*/;
}

.tabs {
	border: 1px solid #d3d3d3;
	background:#9fda58 url(../../../lib/jquery/jquery-ui/themes/trontastic/images/ui-bg_gloss-wave_85_9fda58_500x100.png) 50% 50% repeat-x;

	}

.tabmark {
	border: 1px solid #1b1613;
	background: #0a0a0a url(../../../lib/jquery/jquery-ui/themes/trontastic/images/ui-bg_glass_40_0a0a0a_1x400.png) 50% 50% repeat-x;
	font-weight: bold;
	color: #b8ec79;
	outline: none;
}

.tabmark a {
	color: #b8ec79;
}

.tabactive {
	border: 1px solid #696969;
	background: #4c4c4c url(../../../lib/jquery/jquery-ui/themes/trontastic/images/ui-bg_flat_0_4c4c4c_40x100.png) 50% 50% repeat-x;
	font-weight: bold;
	color: #ffffff !important;
	outline: none;
}

.tabactive a {
	color: #fff;
}

#tiki-top .cssmenu_horiz li {
	background:#9fda58 url(../../../lib/jquery/jquery-ui/themes/trontastic/images/ui-bg_gloss-wave_85_9fda58_500x100.png) 50% 50% repeat-x;
	margin-right: 5px;
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
}

.post .postbody {
	border: 1px solid #4a4a4a;
	background: #000000 url(../../../lib/jquery/jquery-ui/themes/trontastic/images/ui-bg_gloss-wave_55_000000_500x100.png) 50% top repeat-x;
	color: #ffffff;
}

.postbody-title {
/*	border: 1px solid #aaaaaa; */
	background:#9fda58 url(../../../lib/jquery/jquery-ui/themes/trontastic/images/ui-bg_gloss-wave_85_9fda58_500x100.png) 50% 50% repeat-x;
	color: #222222;
}
	
.caleven,
.calodd {
	background: #0A0A0A url(../../../lib/jquery/jquery-ui/themes/trontastic/images/ui-bg_gloss-wave_55_000000_500x100.png) repeat-x scroll 50% 50%;
	border:1px solid #1B1613;
	color:#B8EC79;
}

.caleven a:link,
.caleven a:visited,
.calodd a:link,
.calodd a:visited  {
	color: #B8EC79;	
}

body.tiki_admin .simplebox,
a.admbox,
a.admbox.off {
	border: 1px solid #4a4a4a;
	background-color: #000;
	color: #fff;
}

